--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
     "node-opus": "^0.2.7",
     "simple-youtube-api": "5.0.1",
     "ytdl-core": "0.20.2",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "sqlite": "^3.0.0",
+    "sqlite3": "^4.0.2",
+    "superagent": "^3.8.3",
+    "snekfetch": "^4.0.4",
+    "node-superfetch": "^0.1.2",
+    "superagent": "^3.8.3"
   },
   "devDependencies": {
     "eslint": "^4.0.0",
